add: fork statement