@@ -2,67 +2,119 @@ package me.fineasgavre.apm.toylanguage.controller;
 
 import me.fineasgavre.apm.toylanguage.domain.adts.TLMap;
 import me.fineasgavre.apm.toylanguage.domain.adts.interfaces.ITLHeap;
-import me.fineasgavre.apm.toylanguage.domain.adts.interfaces.ITLList;
 import me.fineasgavre.apm.toylanguage.domain.adts.interfaces.ITLMap;
 import me.fineasgavre.apm.toylanguage.domain.state.ProgramState;
 import me.fineasgavre.apm.toylanguage.domain.statements.interfaces.IStatement;
 import me.fineasgavre.apm.toylanguage.domain.values.RefValue;
 import me.fineasgavre.apm.toylanguage.domain.values.interfaces.IValue;
-import me.fineasgavre.apm.toylanguage.exceptions.execution.CurrentProgramStateNotConfiguredTLException;
-import me.fineasgavre.apm.toylanguage.exceptions.execution.EmptyExecutionStackTLException;
 import me.fineasgavre.apm.toylanguage.exceptions.TLException;
+import me.fineasgavre.apm.toylanguage.exceptions.execution.IOTLException;
+import me.fineasgavre.apm.toylanguage.repository.ProgramStateRepository;
 import me.fineasgavre.apm.toylanguage.repository.interfaces.IProgramStateRepository;
-import me.fineasgavre.apm.toylanguage.repository.SingleThreadProgramStateRepository;
 import me.fineasgavre.apm.toylanguage.utils.PrintUtils;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 public class ProgramStateController {
+    private ExecutorService executorService;
     private final IProgramStateRepository programStateRepository;
     private boolean isDebugMode = false;
 
     public ProgramStateController() {
-        this.programStateRepository = new SingleThreadProgramStateRepository();
-    }
-
-    public void setCurrentProgramState(ProgramState programState) {
-        this.programStateRepository.setCurrentProgramState(programState);
+        this.programStateRepository = new ProgramStateRepository();
     }
 
     public void setCurrentProgramFromStatement(IStatement statement) {
         var programState = new ProgramState(statement);
-        this.programStateRepository.setCurrentProgramState(programState);
+        this.programStateRepository.addProgramState(programState);
     }
 
-    public void executeCurrentUntilEmpty() throws TLException {
-        if (!this.programStateRepository.hasCurrentProgramState()){
-            throw new CurrentProgramStateNotConfiguredTLException();
+    public void allStep() {
+        executorService = Executors.newFixedThreadPool(2);
+
+        var programStates = runningProgramStates(programStateRepository.getProgramStates());
+        while (programStates.size() > 0) {
+            var referencedAddresses = getHeapAddressesFromSymbolTables(programStates.stream().map(e -> e.getSymbolTable()).toList());
+            var firstHeap = programStates.stream().findFirst().get().getHeap();
+
+            firstHeap.setContent(conservativeGarbageCollection(referencedAddresses, firstHeap));
+
+            try {
+                oneStepForAllProgramStates(programStates);
+            } catch (InterruptedException e) {
+                PrintUtils.printTLException(new TLException("All Step execution error."));
+            }
+            programStates = runningProgramStates(programStateRepository.getProgramStates());
         }
 
-        var currentProgramState = programStateRepository.getCurrentProgramState();
-        programStateRepository.logProgramStateExecution(currentProgramState);
-
-        while (!currentProgramState.getExecutionStack().isEmpty()) {
-            currentProgramState = executeOneStep(currentProgramState);
-
-            programStateRepository.logProgramStateExecution(currentProgramState);
-            currentProgramState.getHeap().setContent(conservativeGarbageCollection(getHeapAddressesFromSymbolTable(currentProgramState.getSymbolTable()), currentProgramState.getHeap()));
-            programStateRepository.logProgramStateExecution(currentProgramState);
-
-            displayProgramState(currentProgramState);
-        }
+        executorService.shutdownNow();
+        programStateRepository.setProgramStates(programStates);
     }
 
-    public void executeOneStepForCurrent() throws TLException {
-        if (!this.programStateRepository.hasCurrentProgramState()){
-            throw new CurrentProgramStateNotConfiguredTLException();
-        }
+    private void oneStepForAllProgramStates(List<ProgramState> programStates) throws InterruptedException {
+        programStates.forEach(p -> {
+            try {
+                programStateRepository.logProgramStateExecution(p);
+                displayProgramState(p);
+            } catch (IOTLException e) {
+                PrintUtils.printTLException(e);
+            }
+        });
 
-        var currentProgramState = programStateRepository.getCurrentProgramState();
-        currentProgramState = executeOneStep(currentProgramState);
-        displayProgramState(currentProgramState);
+        var callables = programStates.stream()
+                .map(p -> (Callable<ProgramState>)(() -> {
+                    try {
+                       return p.executeOneStep();
+                    } catch (TLException e) {
+                        PrintUtils.printTLException(e);
+                    }
+
+                    return null;
+                }))
+                .toList();
+
+        var newProgramStates = executorService.invokeAll(callables)
+                .stream()
+                .map(future -> {
+                    try {
+                        return future.get();
+                    } catch (ExecutionException | InterruptedException e) {
+                        PrintUtils.printTLException(new TLException("Future execution exception."));
+                    }
+
+                    return null;
+                })
+                .filter(Objects::nonNull)
+                .toList();
+
+        var combinedStates = new ArrayList<ProgramState>();
+        combinedStates.addAll(programStates);
+        combinedStates.addAll(newProgramStates);
+
+        programStateRepository.setProgramStates(combinedStates);
+
+        combinedStates.forEach(p -> {
+            try {
+                programStateRepository.logProgramStateExecution(p);
+                displayProgramState(p);
+            } catch (IOTLException e) {
+                PrintUtils.printTLException(e);
+            }
+        });
+    }
+
+    private List<ProgramState> runningProgramStates(List<ProgramState> programStates) {
+        return programStates.stream()
+                .filter(ProgramState::isNotCompleted)
+                .toList();
     }
 
     private void displayProgramState(ProgramState programState) {
@@ -71,19 +123,8 @@ public class ProgramStateController {
         }
     }
 
-    private ProgramState executeOneStep(ProgramState programState) throws TLException {
-        var executionStack = programState.getExecutionStack();
-
-        if (executionStack.isEmpty()) {
-            throw new EmptyExecutionStackTLException();
-        }
-
-        var currentStatement = executionStack.pop();
-        return currentStatement.execute(programState);
-    }
-
-    public ProgramState getCurrentProgramState() {
-        return this.programStateRepository.getCurrentProgramState();
+    public List<ProgramState> getProgramStates() {
+        return this.programStateRepository.getProgramStates();
     }
 
     public void setDebugMode(boolean debugMode) {
@@ -94,7 +135,7 @@ public class ProgramStateController {
         var heapReferencedAddresses = heap.getContent().getMap().values().stream()
                 .filter(e -> e instanceof RefValue)
                 .map(e -> ((RefValue) e).getAddress())
-                .collect(Collectors.toList());
+                .toList();
         var cleanedHeapContent =  heap.getContent().getMap().entrySet().stream()
                 .filter(e -> symbolTableAddresses.contains(e.getKey()) || heapReferencedAddresses.contains(e.getKey()))
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
@@ -108,6 +149,14 @@ public class ProgramStateController {
         return symbolTable.getMap().values().stream()
                 .filter(v -> v instanceof RefValue)
                 .map(v -> ((RefValue) v).getAddress())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private List<Integer> getHeapAddressesFromSymbolTables(List<ITLMap<String, IValue>> symbolTables) {
+        var addresses = new ArrayList<Integer>();
+
+        symbolTables.forEach(st -> addresses.addAll(getHeapAddressesFromSymbolTable(st)));
+
+        return addresses;
     }
 }
